# vyatta-cluster

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-cluster.postinst.in
etc/init.d/: primary-secondary
lib/Vyatta/Cluster/: Config.pm
scripts/: VyattaClusterConfig.pm  etc-IPaddr2-vyatta  ocf-IPaddr2-vyatta  vyatta-show-cluster.pl  vyatta-update-cluster.pl
templates-cfg/cluster/: node.def
templates-cfg/cluster/dead-interval/: node.def
templates-cfg/cluster/group/: node.def
templates-cfg/cluster/group/node.tag/auto-failback/: node.def
templates-cfg/cluster/group/node.tag/monitor/: node.def
templates-cfg/cluster/group/node.tag/primary/: node.def
templates-cfg/cluster/group/node.tag/secondary/: node.def
templates-cfg/cluster/group/node.tag/service/: node.def
templates-cfg/cluster/interface/: node.def
templates-cfg/cluster/interface/node.tag/peer/: node.def
templates-cfg/cluster/keepalive-interval/: node.def
templates-cfg/cluster/mcast-group/: node.def
templates-cfg/cluster/mode/: node.def
templates-cfg/cluster/monitor-dead-interval/: node.def
templates-cfg/cluster/pre-shared-secret/: node.def
templates-cfg/cluster/ucast/: node.def
templates-op/force/cluster/: node.def
templates-op/force/cluster/active/: node.def
templates-op/force/cluster/standby/: node.def
templates-op/restart/cluster/: node.def
templates-op/show/cluster/: node.def
templates-op/show/cluster/status/: node.def
